fixed an issue where new logo was slightly off center

--- a/src/componentcss/Header.css
+++ b/src/componentcss/Header.css
@@ -15,6 +15,7 @@
 
 .logo {
     margin: 5px 0px 0px 0px;
+    padding-left: 20px;
     height: auto;
     max-height: 76px;
     filter: drop-shadow(0px 1000px 0 #545B5A);
